# rust-order-book

./: .env  Cargo.toml  Dockerfile  README.Docker.md  README.md  quickrun.sh  start_pg.sh
examples/: cmd-line-app.rs  user-example.rs
migrations/: 20241006052405_init.sql
src/: lib.rs  main.rs  order.rs  order_book.rs  transaction.rs  transaction_book.rs  user.rs
src/api/: create_user.rs  login.rs  mod.rs  validate_username.rs
src/api/order_book/: get_order_book.rs  mod.rs
src/api/users/: login.rs  validate_username.rs
src/postgres_functions/: mod.rs  postgres_user.rs  user.rs
src/user_api/: jwt.rs  login.rs  mod.rs
src/user_functions/: mod.rs  validate_username.rs
src/users/: create_user.rs  login.rs
