[package]
name = "order-book"
version = "0.2.1"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
dotenv = "0.15.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "macros",
    "uuid",
    "bigdecimal",
] }
tokio = { version = "1", features = ["full"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
bigdecimal = "0.4.5"
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
